--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -5,7 +5,7 @@
     "author": "koraybey <dev@koray.onl>",
     "private": true,
     "type": "module",
-    "main": "index.mjs",
+    "main": "index.js",
     "devDependencies": {
         "@eslint/compat": "^1.3.1",
         "@eslint/js": "^9.31.0",
@@ -24,7 +24,7 @@
         "eslint-plugin-react-hooks": "^6.0.0-rc.1",
         "eslint-plugin-react-native": "^4.0.0",
         "eslint-plugin-sonarjs": "^3.0.4",
-        "eslint-plugin-unicorn": "^60.0.0",
+        "eslint-plugin-unicorn": "^59.0.1",
         "eslint-plugin-unused-imports": "^4.1.4",
         "globals": "^16.3.0",
         "prettier": "^3.6.2",
@@ -36,5 +36,8 @@
     },
     "engines": {
         "node": ">=22.0.0"
+    },
+    "dependencies": {
+        "eslint-seatbelt": "^0.1.2"
     }
 }
