--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -5,7 +5,7 @@
     "author": "koraybey <dev@koray.onl>",
     "private": true,
     "type": "module",
-    "main": "index.js",
+    "main": "index.mjs",
     "devDependencies": {
         "@eslint/compat": "^1.3.1",
         "@eslint/js": "^9.31.0",
@@ -28,7 +28,8 @@
         "eslint-plugin-unused-imports": "^4.1.4",
         "globals": "^16.3.0",
         "prettier": "^3.6.2",
-        "typescript-eslint": "^8.38.0"
+        "typescript-eslint": "^8.38.0",
+        "@cloudflare/vitest-pool-workers": "^0.8.31"
     },
     "peerDependencies": {
         "eslint": ">=9",
