--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -7,6 +7,7 @@
     "type": "module",
     "main": "index.mjs",
     "devDependencies": {
+        "@babel/eslint-parser": "^7.28.0",
         "@eslint/compat": "^1.3.1",
         "@eslint/js": "^9.31.0",
         "@stylistic/eslint-plugin": "^5.2.2",
@@ -22,14 +23,15 @@
         "eslint-plugin-promise": "^7.2.1",
         "eslint-plugin-react": "^7.30.1",
         "eslint-plugin-react-hooks": "^6.0.0-rc.1",
-        "eslint-plugin-react-native": "^4.0.0",
+        "eslint-plugin-react-native": "^5.0.0",
+        "eslint-plugin-simple-import-sort": "^12.1.1",
         "eslint-plugin-sonarjs": "^3.0.4",
         "eslint-plugin-unicorn": "^59.0.1",
         "eslint-plugin-unused-imports": "^4.1.4",
         "globals": "^16.3.0",
         "prettier": "^3.6.2",
-        "typescript-eslint": "^8.38.0",
-        "@cloudflare/vitest-pool-workers": "^0.8.31"
+        "typescript": "5.0.4",
+        "typescript-eslint": "^8.38.0"
     },
     "peerDependencies": {
         "eslint": ">=9",
