--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "node": ">=18.18.0"
   },
   "dependencies": {
+    "@eslint/compat": "^1.3.1",
     "@eslint/js": "^9.31.0",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
     "@vitest/eslint-plugin": "^1.3.4",
-    "@eslint/compat": "^1.3.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-functional": "^9.0.2",
     "eslint-plugin-import-x": "^4.16.1",
@@ -49,7 +49,8 @@
     "eslint-plugin-unused-imports": "^4.1.4",
     "eslint-seatbelt": "^0.1.2",
     "globals": "^16.3.0",
-    "typescript-eslint": "^8.38.0"
+    "typescript-eslint": "^8.38.0",
+    "eslint-import-resolver-typescript": "^4.4.4"
   },
   "devDependencies": {
     "eslint": "^9.31.0",
