--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
     "allowJs": true,
     "checkJs": false,
     "skipLibCheck": true,
+    "strict": true,
+    "strictNullChecks": true,
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "noEmit": true
